--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "baconjs": "^0.7.84",
+    "node-fetch": "^1.5.3",
     "react": "^15.2.0",
     "react-dom": "^15.2.0"
   }
