--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "baconjs": "^0.7.84",
     "node-fetch": "^1.5.3",
     "react": "^15.2.0",
-    "react-dom": "^15.2.0"
+    "react-dom": "^15.2.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
