--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "express": "^4.14.0",
+    "http-proxy-middleware": "^0.16.0",
     "standard": "^7.1.2",
     "standard-loader": "^4.0.0",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.12.0"
   },
   "dependencies": {
     "baconjs": "^0.7.84",
