--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/webpack-dev-server",
+    "start": "node dev-server.js",
     "build": "./node_modules/.bin/webpack"
   },
   "author": "",
